--- a/flavio.html
+++ b/flavio.html
@@ -1,49 +1,15 @@
-let palavra;
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
 
-function setup() {
-  createCanvas(400, 400);
-
-  palavra = palavraAleatoria();
-  
-}
-
-function palavraAleatoria() {
-  
-  let palavras = ["Casa", "Apartamento", "Condominio"];
-  
-  return random(palavras);
-}
-
-function inicializaCores() {
-  background("brown");
-  fill("green");
-  textSize(64);
-  textAlign(CENTER, CENTER);
-}
-
-function palavraParcial(minimo, maximo) {
-  let quantidade = map(mouseX, minimo, maximo, 1, palavra.length);
-  let parcial = palavra.substring(0, quantidade);
-  return parcial;
-}
-
-function draw() {
-  
-  inicializaCores();
-
-  let texto = palavraParcial(0, width);
-    
-  text(texto, 200, 200);
-  
-}
-
-function modoNoturno(horario) {
-  if (horario > 18) {
-    console.log("Você precisa ligar o modo escuro!");
-  } else {
-    console.log("Modo noturno não é necessário neste momento.");
-  }
-}
-
-modoNoturno(15);
-modoNoturno(20);
+  </head>
+  <body>
+    <main>
+    </main>
+    <script src="sketch.js"></script>
+  </body>
+</html>
